<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/background_workorder_in_progress"
    android:gravity="bottom"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

    <TextView
        android:id="@+id/short_summary"
        android:ellipsize="end"
        android:layout_marginStart="10dp"
        android:textColor="#7a8187"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

    <TextView
        android:visibility="gone"
        android:layout_marginStart="10dp"
        android:id="@+id/summary"
        android:textColor="#7a8187"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:maxLines="1"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/date_expected"
        />
    <TextView
        android:id="@+id/date"
        android:maxLines="1"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:maxLines="1"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/location"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2" />

        <ImageView
            android:id="@+id/bt_maps"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="5dp"
            android:layout_weight="0.8"
            android:contentDescription="@string/ico_maps"
            android:src="@drawable/ic_maps" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:background="#eeeeee">
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:paddingTop="5dp"
        android:layout_marginStart="10dp"
        android:gravity="center_vertical"
        android:background="@android:color/white"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <LinearLayout
            android:id="@+id/more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/image_more_info"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/ico_more_info"
                android:src="@drawable/ic_info_in_progress"
                />


                   <LinearLayout
                       android:id="@+id/more_info_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:textColor="#484d51"
                        android:text="@string/view"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#484d51"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:text="@string/more_info"
                        />

                </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/inspections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/image_inspections"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/ico_inspections"
                android:src="@drawable/ic_workorder_in_progress"
                />
            <LinearLayout
                android:id="@+id/inspections_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open"
                android:textSize="10sp"
                android:textColor="#484d51"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#484d51"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/inspection"
                />

        </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>