<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/color_background"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linear_notification"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/linear_success"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:background="#ef3f4c"
            android:layout_height="55dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/sync_success" />
            </LinearLayout>


        <LinearLayout
            android:id="@+id/linear_try_again"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:background="#ef3f4c"
            android:layout_height="55dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:textColor="#FFFFFF"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/sync_error" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:gravity="center_vertical|end"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:text="@string/try_again" />

        </LinearLayout>


    </LinearLayout>

    <ExpandableListView
        android:id="@+id/listview"
        android:visibility="gone"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:id="@+id/linear_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e4e8eb"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="200dp"
            android:layout_height="260dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logo_sb" />

        <TextView
            android:id="@+id/textView"
            android:gravity="center"
            android:textColor="#747b81"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inspection_empty" />

    </LinearLayout>


</LinearLayout>