<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">



<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background_login">

        <TextView
            android:id="@+id/title"
            android:text="@string/workorder_title"
            android:textSize="26sp"
            android:textColor="@android:color/white"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp"/>

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="300dp"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/workorder_subtitle"/>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="160dp"
            android:layout_margin="30dp"
            android:background="@drawable/box_login"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:background="@color/color_background"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@color/color_background"
                    android:contentDescription="@string/ico_idproject"
                    app:srcCompat="@drawable/ic_idproject" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/color_background"
                    android:gravity="center_vertical"
                    android:orientation="vertical">


                <EditText
                    android:id="@+id/editText_idproject"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/black"
                    android:hint="@string/id_project"
                    android:inputType="textPersonName"/>

                    <TextView
                        android:layout_width="300dp"
                        android:textSize="10sp"
                        android:textColor="#747c81"
                        android:layout_height="wrap_content"
                        android:text="@string/required"/>

                    </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c9c9c9"
                android:orientation="horizontal">
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@color/color_background"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:background="@color/color_background"
                    android:contentDescription="@string/ico_address"
                    app:srcCompat="@drawable/ic_address" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@color/color_background"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                <EditText
                    android:id="@+id/editText_address"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/black"
                    android:hint="@string/full_address"
                    android:inputType="textPersonName"/>

                <TextView
                    android:layout_width="300dp"
                    android:textSize="10sp"
                    android:textColor="#747c81"
                    android:layout_height="wrap_content"
                    android:text="@string/required"/>

            </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    <Button
            android:id="@+id/button_login"
            android:layout_width="300dp"
            android:layout_height="54dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textSize="23sp"
            android:background="@drawable/box_button_login"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>




    <LinearLayout
        android:id="@+id/list_layout"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="360dp"
        android:layout_height="130dp"
        android:gravity="center"
        android:background="@drawable/shadow"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="134dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">

        <ListView
            android:id="@+id/listView_project"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        </LinearLayout>


</RelativeLayout>
