<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.bg7.appvistoria.MainActivity">

    <EditText
        android:id="@+id/editText_user"
        android:layout_width="425dp"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="-68dp"
        tools:layout_editor_absoluteY="304dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="265dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:paddingLeft="20dp"
        android:paddingRight="30dp"
        android:paddingTop="80dp"
        app:srcCompat="@drawable/logo_login"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/password"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="380dp" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="425dp"
        android:layout_height="44dp"
        android:inputType="textPassword"
        android:ems="10"
        tools:layout_editor_absoluteY="419dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="418dp"
        android:layout_height="62dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="565dp" />
</android.support.constraint.ConstraintLayout>
